<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ADD8E6">

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="@drawable/btn_bg"
        android:padding="15dip" >

        <TextView
            android:id="@+id/login_user_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:text="@string/user"
            android:textSize="16dp"
            android:typeface="sans" />

        <EditText
            android:id="@+id/user_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_user_input"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/hint_user"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:id="@+id/login_pass_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_input"
            android:layout_margin="5dp"
            android:text="@string/pass"
            android:textSize="16dp"
            android:typeface="sans" />

        <EditText
            android:id="@+id/pass_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_pass_input"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/hint_pass"
            android:inputType="text"
            android:singleLine="true" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal" >

    <TextView
        android:id="@+id/no_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_user"
        android:layout_marginLeft="60dp" />

    <TextView
        android:id="@+id/new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/new_user"
        android:layout_marginLeft="60dp"
         />
     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >

         <TextView
             android:layout_width="402dp"
             android:layout_height="51dp"
             android:layout_marginLeft="50dp"
             android:background="@drawable/gxs_ziti" />
         
         <Button
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:onClick="To_fruist"
             android:background="@drawable/gxs2" 
             android:layout_marginLeft="80dp"
             />

         <Button
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="To_Title"
             android:text="标题" />
    
     </LinearLayout>
     
</LinearLayout>